<resources>
    <string name="app_name">TwoFragment_OneActivity</string>
    <string name="accept">Передать</string>
    <string name="clear_switch">Вернутся назад и очистить данные</string>
    <string name="first_name">введите имя</string>
    <string name="no_first_name">имя не введено</string>
    <string name="last_name">введите фамилию</string>
    <string name="no_last_name">фамилия не введена</string>
    <string name="email">введите электронную почту</string>
    <string name="no_email">электронная почта не введена</string>

</resources>