<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFirstNameGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/no_first_name"
        android:text="" />

    <TextView
        android:id="@+id/tvLastNameGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/no_last_name"
        android:text="" />

    <TextView
        android:id="@+id/tvEmailGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/no_email"
        android:text="" />

    <Button
        android:id="@+id/btnClear_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_switch" />

</LinearLayout>
