<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFirstNameGet"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/tvLastNameGet"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/tvEmailGet"
        android:gravity="center"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:text="@string/email" />

    <Button
        android:id="@+id/btnAcceptGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

</LinearLayout>
